// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsDisplay should render when not pass handler 1`] = `
<div>
  <Container
    fluid={true}
    tag="div"
  >
    <Table
      className="mt-4"
      responsiveTag="div"
      tag="table"
    >
      <thead>
        <tr>
          <th
            width="20%"
          >
            Name
          </th>
          <th>
            Description
          </th>
          <th>
            Category
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="1"
        >
          <td
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
          >
            name1
          </td>
          <td>
            description1
          </td>
          <td>
            <Button
              color="secondary"
              size="sm"
              tag={[Function]}
              to="/search/food"
            >
              food
            </Button>
          </td>
        </tr>
        <tr
          key="2"
        >
          <td
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
          >
            name2
          </td>
          <td>
            description2
          </td>
          <td>
            <Button
              color="secondary"
              size="sm"
              tag={[Function]}
              to="/search/food"
            >
              food
            </Button>
          </td>
        </tr>
      </tbody>
    </Table>
  </Container>
</div>
`;

exports[`ItemsDisplay should render when passed handler 1`] = `
<div>
  <Container
    fluid={true}
    tag="div"
  >
    <Table
      className="mt-4"
      responsiveTag="div"
      tag="table"
    >
      <thead>
        <tr>
          <th
            width="20%"
          >
            Name
          </th>
          <th>
            Description
          </th>
          <th>
            Category
          </th>
          <th
            width="10%"
          >
            Actions
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="1"
        >
          <td
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
          >
            name1
          </td>
          <td>
            description1
          </td>
          <td>
            <Button
              color="secondary"
              size="sm"
              tag={[Function]}
              to="/search/food"
            >
              food
            </Button>
          </td>
          <td>
            <ButtonGroup
              role="group"
              tag="div"
            >
              <Button
                color="primary"
                size="sm"
                tag={[Function]}
                to="/items/1"
              >
                Edit
              </Button>
              <Button
                color="danger"
                onClick={[Function]}
                size="sm"
                tag="button"
              >
                Delete
              </Button>
            </ButtonGroup>
          </td>
        </tr>
        <tr
          key="2"
        >
          <td
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
          >
            name2
          </td>
          <td>
            description2
          </td>
          <td>
            <Button
              color="secondary"
              size="sm"
              tag={[Function]}
              to="/search/food"
            >
              food
            </Button>
          </td>
          <td>
            <ButtonGroup
              role="group"
              tag="div"
            >
              <Button
                color="primary"
                size="sm"
                tag={[Function]}
                to="/items/2"
              >
                Edit
              </Button>
              <Button
                color="danger"
                onClick={[Function]}
                size="sm"
                tag="button"
              >
                Delete
              </Button>
            </ButtonGroup>
          </td>
        </tr>
      </tbody>
    </Table>
  </Container>
</div>
`;
